--- a/.github/action.yml
+++ b/.github/action.yml
@@ -25,6 +25,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        export GITHUB_TOKEN=${{ secrets.TOKEN }}
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -e .
