--- a/.github/action.yml
+++ b/.github/action.yml
@@ -32,4 +32,5 @@ jobs:
     - name: Readme update
       run: |
         repo=$(basename `git rev-parse --show-toplevel`)
+        echo $GITHUB_TOKEN
         test-cmd asset $repo >> README.md
