--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
         pip install -e .
     - name: Readme update
       run: |
+        echo $GITHUB_TOKEN
         repo=$(basename `git rev-parse --show-toplevel`)
         test-cmd asset $repo >> README.md
 
