--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,6 @@ jobs:
         export GITHUB_TOKEN=${{ secrets.TOKEN }}
         repo=$(basename `git rev-parse --show-toplevel`)
         echo $repo
-        test-cmd --help
-        test-cmd asset $repo >> README.md
+        test-cmd asset $repo
       
 
