--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
         repo=$(basename `git rev-parse --show-toplevel`)
         echo $repo
         var=$(test-cmd asset $repo)
-        echo $var >> README.md
+        echo 'hello' >> README.md
       
 
