--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Readme update
       run: |
         repo=$(basename `git rev-parse --show-toplevel`)
-        test-cmd asset $repo >> README.md
+        test-cmd asset $repo
     - name: Commit changes
       run: |
         git config --local user.email "action@github.com"
