--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,7 @@ jobs:
         pip install -e .
     - name: Readme update
       run: |
-        repo=$(basename `git rev-parse --show-toplevel`)
-        test-cmd asset $repo
+        test-cmd asset $(basename `git rev-parse --show-toplevel`)
     - name: Commit changes
       run: |
         git config --local user.email "action@github.com"
